--- a/templates/_base.html
+++ b/templates/_base.html
@@ -40,33 +40,8 @@
     <link rel="image_src" href="https://cubangrooveperu.com/static/img/logos/logo_desk.webp">
 
     <!-- 🔹 SCHEMA.ORG (ya tienes uno, pero puedes actualizarlo levemente) -->
-    <script type="application/ld+json">
-    {
-    "@context": "https://schema.org",
-    "@type": "DanceSchool",
-    "name": "Cuban Groove Perú",
-    "url": "https://cubangrooveperu.com",
-    "logo": "https://cubangrooveperu.com/static/img/logos/logo_desk.webp",
-    "image": "https://cubangrooveperu.com/static/img/logos/logo_desk.webp",
-    "description": "Cuban Groove ofrece clases de salsa, timba y ritmos afrocubanos en Lima. Aprende con metodología técnica, musicalidad y conexión.",
-    "telephone": "+51 991 337 159",
-    "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Lima",
-        "addressRegion": "Lima",
-        "postalCode": "15001",
-        "addressCountry": "PE"
-    },
-    "priceRange": "$$",
-    "sameAs": [
-        "https://www.instagram.com/cubangroove/",
-        "https://www.facebook.com/muevetecuba",
-        "https://www.tiktok.com/@cubangrooveperu",
-        "https://www.youtube.com/@CubanGroovePeru"
-    ]
-    }
-    </script>
-
+   {% block structured_data %}
+   {% endblock structured_data %}
 
 
 
