--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
                 <!-- Imagen (izquierda) -->
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/about/adultos-bailando-salsa.jpg' %}" alt="Clases de baile para adultos en Cuban Groove" title="Clases de Salsa y Baile para Adultos – Cuban Groove" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/about/adultos-bailando-salsa.jpg' %}" alt="Clases de baile para adultos en Cuban Groove" title="Clases de Salsa y Baile para Adultos – Cuban Groove" style="object-fit: cover;" loading="lazy">
                     </div>
                 </div>
     
@@ -180,7 +180,7 @@
                         <div class="row g-3">
                             <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
                                 <a class="position-relative d-block overflow-hidden" href="{% url 'courses_surco' %}" title='clases de baile en surco'>
-                                    <img class="img-fluid" src="{% static 'img/categories/cat-1.jpg' %}" alt="clases-de-salsa-Surco" title="Clases de Salsa en Surco estilo cubano">
+                                    <img class="img-fluid" src="{% static 'img/categories/cat-1.jpg' %}" alt="clases-de-salsa-Surco" title="Clases de Salsa en Surco estilo cubano" loading="lazy">
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                         <h3 class="m-0 custom-h5">Clases de Salsa en Surco</h3>
                                         <small  style="color: #FF6B35; font-weight: 500;">Pasos libres y Pareja</small>
@@ -189,7 +189,7 @@
                             </div>
                             <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
                                 <a class="position-relative d-block overflow-hidden" href="{% url 'courses_lince' %}" title='clases de baile en lince'>
-                                    <img class="img-fluid" src="{% static 'img/categories/cat-2.jpg' %}" alt="clases-de-salsa-en-lince" title="Clases de Salsa en Lince cerca de Miraflores cuban groove">
+                                    <img class="img-fluid" src="{% static 'img/categories/cat-2.jpg' %}" alt="clases-de-salsa-en-lince" title="Clases de Salsa en Lince cerca de Miraflores cuban groove" loading="lazy">
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                         <h3 class="m-0 custom-h5">Clases de Salsa Lince</h3>
                                         <small  style="color: #FF6B35; font-weight: 500;">Pasos libres, Lady style y Pareja</small>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.5s">
                                 <a class="position-relative d-block overflow-hidden" href="{% url 'courses_miraflores' %}" title='clases de baile en miraflores'>
-                                    <img class="img-fluid" src="{% static 'img/categories/cat-3.jpg' %}" alt="clases-de-salsa-en-miraflores" title="Clases de Salsa en Miraflores y alrededores">
+                                    <img class="img-fluid" src="{% static 'img/categories/cat-3.jpg' %}" alt="clases-de-salsa-en-miraflores" title="Clases de Salsa en Miraflores y alrededores" loading="lazy">
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                         <h3 class="m-0 custom-h5">Clases de Salsa Miraflores</h3>
                                         <small  style="color: #FF6B35; font-weight: 500;">Pasos libres y Pareja</small>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6 wow zoomIn" data-wow-delay="0.7s" style="min-height: 350px;">
                         <a class="position-relative d-block h-100 overflow-hidden" href="{% url 'courses_san_isidro' %}" title='clases de baile en san isidro'>
-                            <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/categories/cat-4.jpg' %}" alt="clases-de-salsa-en-san-isidro" title="Clases de Salsa en San Isidro cuban groove" style="object-fit: cover;">
+                            <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/categories/cat-4.jpg' %}" alt="clases-de-salsa-en-san-isidro" title="Clases de Salsa en San Isidro cuban groove" style="object-fit: cover;" loading="lazy">
                             <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin:  1px;">
                                 <h3 class="m-0 custom-h5">Clases de Salsa en San Isidro</h3>
                                 <small  style="color: #FF6B35; font-weight: 500;">Tecnica, Afro y Pasos Libres</small>
